--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,25 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# Perl stuff
+/blib/
+/.build/
+_build/
+cover_db/
+inc/
+Build
+!Build/
+Build.bat
+.last_cover_stats
+/Makefile
+/Makefile.old
+/MANIFEST.bak
+/META.yml
+/META.json
+/MYMETA.*
+nytprof.out
+/pm_to_blib
+*.o
+*.bs
+/_eumm/
